:bug::iphone: fix 100vh scroll issue on mobile

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,55 +1,57 @@
 body {
-	background-color: var(--color-dark);
-	font-family: "Vercetti";
-	font-size: 16px;
+    background-color: var(--color-dark);
+    font-family: "Vercetti";
+    font-size: 16px;
 }
 
 canvas {
-	height: 100vh !important;
-	width: 100% !important;
+    height: 100vh !important;
+    width: 100% !important;
 
-	@include medium {
-		height: -webkit-fill-available;
-	}
+    @include medium {
+        height: -moz-available !important; /* WebKit-based browsers will ignore this. */
+        height: -webkit-fill-available !important; /* Mozilla-based browsers will ignore this. */
+        height: fill-available !important;
+    }
 }
 
 .popup {
-	position: absolute;
-	left: 50%;
-	top: 15%;
-	width: 64%;
-	max-width: 660px;
-	transform: translateX(-50%);
-	font-size: 3vmin;
-	line-height: 150%;
-	text-align: center;
-	color: var(--color-main);
-	z-index: 20;
-	pointer-events: none;
+    position: absolute;
+    left: 50%;
+    top: 15%;
+    width: 64%;
+    max-width: 660px;
+    transform: translateX(-50%);
+    font-size: 3vmin;
+    line-height: 150%;
+    text-align: center;
+    color: var(--color-main);
+    z-index: 20;
+    pointer-events: none;
 
-	a {
-		pointer-events: initial;
-	}
+    a {
+        pointer-events: initial;
+    }
 
-	p {
-		font-size: 2.2vmin;
-	}
+    p {
+        font-size: 2.2vmin;
+    }
 
-	@include medium {
-		width: 80%;
-		font-size: 4.5vmin;
-	}
+    @include medium {
+        width: 80%;
+        font-size: 4.5vmin;
+    }
 
-	a {
-		color: var(--color-main);
-		text-decoration: underline;
-	}
+    a {
+        color: var(--color-main);
+        text-decoration: underline;
+    }
 
-	span {
-		font-size: 0.8em;
-	}
+    span {
+        font-size: 0.8em;
+    }
 
-	h1 {
-		font-size: 1.5em;
-	}
+    h1 {
+        font-size: 1.5em;
+    }
 }
